BlogPosts/LocalDevEnvInKubernetes/DemoCode/infra/keycloak/manifest-keycloak.yaml
# https://www.keycloak.org/getting-started/getting-started-kube
# https://raw.githubusercontent.com/keycloak/keycloak-quickstarts/refs/heads/main/kubernetes/keycloak.yaml
# ---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-discovery
  namespace: keycloak
spec:
  selector:
    app: keycloak
  clusterIP: None
  type: ClusterIP
---
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  serviceName: keycloak-discovery
  # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      # Ideally more in prod, however nothing to wait for locally
      terminationGracePeriodSeconds: 0
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.7.0
          # args: ["start"]
          args: ["start-dev"]
          # command: ["/bin/bash"]
          # # args: ["-c", "while true; do echo hello; sleep 10;done"]
          # args: ["/kc-startup-config.sh"]
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7800
            - name: jgroups-fd
              containerPort: 57800
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 1
            failureThreshold: 600
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 10
            failureThreshold: 3
          resources: {}
          # resources:
          #   limits:
          #     cpu: 2000m
          #     memory: 2000Mi
          #   requests:
          #     cpu: 500m
          #     memory: 1700Mi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hr-keycloak
  namespace: keycloak
spec:
  parentRefs:
  - name: ourgateway
    namespace: networking-gateway
    kind: Gateway
  hostnames:
  - keycloak.localho.st
  - keycloak.127.0.0.1.nip.io
  rules:
  - backendRefs:
    - name: keycloak
      port: 8080
